[gd_scene load_steps=2 format=3 uid="uid://dwc4hhpwcwyi8"]

[ext_resource type="Script" uid="uid://bpx7qewlebvyf" path="res://Script/game_over.gd" id="1_gameover"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.22
anchor_right = 0.75
anchor_bottom = 0.68

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#a8d1ff][size=36]GAME OVER[/size][/color][/center]"

[node name="ReasonLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "You were defeated"
horizontal_alignment = 1

[node name="HSep" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "Restart"

[node name="MenuButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "Menu"
